--- a/app/src/main/res/layout/fragment_report_section.xml
+++ b/app/src/main/res/layout/fragment_report_section.xml
@@ -6,12 +6,16 @@
     tools:context="xyz.jaggedlab.gugas.expensior.sections.ReportSectionFragment">
 
     <!-- TODO: Update blank fragment layout -->
+    <com.hookedonplay.decoviewlib.DecoView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/round_chart" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="@string/comming_soon"
-        style="@style/TextViewListItem.Light" />
+        android:text="@string/comming_soon" />
 
 </FrameLayout>
