--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,4 +36,21 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="ConfirmationDialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowBackground">@color/dialog_dimmed_background</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowTitleStyle">@null</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="ConfirmationDialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/animation_enter_left_to_right</item>
+        <item name="android:windowExitAnimation">@anim/animation_leave_right_to_left</item>
+    </style>
+
 </resources>
