--- a/app/src/main/res/layout/section_expense_regular_item.xml
+++ b/app/src/main/res/layout/section_expense_regular_item.xml
@@ -4,15 +4,41 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/regular_expense_title"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/margin_small"
-        android:paddingStart="@dimen/margin_large"
-        style="@style/TextViewListItem"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableEnd="@drawable/ic_last_page_black_24dp"/>
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/regular_expense_title"
+            android:layout_margin="@dimen/margin_small"
+            android:layout_gravity="start|center_vertical"
+            android:paddingStart="@dimen/margin_large"
+            style="@style/TextViewListItem"
+            android:layout_weight=".5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/regular_expense_category"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".25"
+            android:layout_gravity="center_vertical"
+            style="@style/TextViewListItem" />
+
+        <TextView
+            android:id="@+id/regular_expense_price"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".25"
+            android:layout_gravity="end|center_vertical"
+            android:text=""
+            android:drawableEnd="@drawable/ic_last_page_black_24dp"
+            style="@style/TextViewListItem"
+            android:paddingEnd="@dimen/margin_small" />
+
+    </LinearLayout>
 
     <View
         android:id="@+id/item_separator_line"
