--- a/app/src/main/res/layout/section_expense_today_title_item.xml
+++ b/app/src/main/res/layout/section_expense_today_title_item.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimaryDark" >
 
     <TextView
         android:id="@+id/todays_title"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight=".6"
         android:padding="@dimen/activity_horizontal_margin"
+        android:gravity="start"
         style="@style/TextViewTitles.Light"/>
+
+    <TextView
+        android:id="@+id/total_amount_of_expenses"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight=".4"
+        android:gravity="end"
+        android:paddingEnd="@dimen/margin_small"
+        style="@style/TextViewTitles.Light.Translucent"/>
 
 </LinearLayout>
