--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,6 +36,11 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="TextViewTitles.Light.Translucent">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white_translucent</item>
+    </style>
+
     <style name="ConfirmationDialog">
         <item name="android:windowFrame">@null</item>
         <item name="android:windowBackground">@color/dialog_dimmed_background</item>
