Added a new component for the category TextViews, which is the RoundCorneredBorder textView that will enable the category to be presented in a more stylish approach.

--- a/app/src/main/res/layout/section_expense_header_item.xml
+++ b/app/src/main/res/layout/section_expense_header_item.xml
@@ -6,7 +6,13 @@
     android:padding="@dimen/activity_horizontal_margin">
 
     <TextView
-        android:text="HEADER HERE"
+        android:id="@+id/todays_expense_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/TextViewTitles"/>
+
+    <com.hookedonplay.decoviewlib.DecoView
+        android:id="@+id/todays_expense_graphic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
