--- a/app/src/main/res/layout/section_expense_regular_item.xml
+++ b/app/src/main/res/layout/section_expense_regular_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -19,12 +20,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
 
-        <TextView
+        <xyz.jaggedlab.gugas.expensior.ui_components.RoundCorneredBorderTextView
             android:id="@+id/regular_expense_category"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".25"
             android:layout_gravity="center_vertical"
+            custom:border_color="@color/black"
             style="@style/TextViewListItem" />
 
         <TextView
