--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="white_translucent">#DDFFFFFF</color>
+    <color name="transparent">#00000000</color>
 
     <color name="medium_blue">#1D49E8</color>
     <color name="navy_blue">#000080</color>77
